# turboapi

./: API_COMPATIBILITY.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  release-notes-template.md  release.yml
.github/workflows/: ci.yml  publish.yml  release-drafter.yml
api/: public_api_v1.json
benchmarks/: baseline.json  bench_runtime.py
docs/: README.md  advanced.md  api-reference.md  deployment.md  index.md  security-recipes.md  tutorial.md  why-turboapi.md
examples/: app.py
tests/: test_app_release.py  test_async_testing_dx.py  test_body_parsing_breadth.py  test_dependencies_surface.py  test_di_extensions_integrations.py  test_fuzz_hardening.py  test_lifespan_state_and_jobs.py  test_middleware_ecosystem.py  test_models.py  test_observability.py  test_openapi_depth.py  test_params_and_serialization.py  test_parity_features.py  test_pydantic_compat.py  test_response_depth_and_ops.py  test_router.py  test_router_surface.py  test_runtime_parity.py  test_security.py  test_soak_runtime.py  test_sync_execution.py  test_testing_dx.py  test_ws_and_openapi_maturity.py
tools/: check_public_api.py
turbo/: __init__.py  app.py  config.py  deps.py  errors.py  extensions.py  jobs.py  lifespan.py  middleware.py  models.py  observability.py  openapi.py  pydantic_compat.py  request.py  response.py  routing.py  security.py  testing.py  utils.py
turbo/integrations/: __init__.py  auth.py  pagination.py  settings.py  sqlalchemy.py
turboapi.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
