[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py-turbo-api"
version = "1.0.1"
description = "TurboAPI - a high-performance ASGI framework with compiled routing, DI, validation, and OpenAPI."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "Paresh Panat" }]
keywords = ["asgi", "web", "framework", "api", "openapi", "performance"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries",
]
dependencies = []

[project.optional-dependencies]
dev = ["uvicorn>=0.23", "pytest>=8", "pytest-cov>=5", "ruff>=0.6", "mypy>=1.10"]
security = ["PyJWT[crypto]>=2.8"]
pydantic = ["pydantic>=2,<3"]

[project.urls]
Homepage = "https://github.com/pareshpanat/turboapi"
Repository = "https://github.com/pareshpanat/turboapi"
Issues = "https://github.com/pareshpanat/turboapi/issues"

[tool.setuptools.packages.find]
include = ["turbo*"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = false
warn_return_any = false
